# lost-cities-Reinforcement-learning

./: .gitignore  .pre-commit-config.yaml  base.ipynb  card.py  deck.py  gamemanager.py  generation.py  main.py  player.py  pyproject.toml  species.py
data/: game_history.csv
lost_cities_game/: card.py  deck.py  gamemanager.py  main.py  player.py
notebooks/: base.ipynb  generation.py  species.py  states.ipynb
play_data/: game_history.csv
