[tool.poetry]
name = "lost cities rl"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
ipykernel = "^6.20.2"
pandas = "^1.5.3"
neat-python = "^0.92"
tensorflow = "^2.11.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.12.1"
pytest = "^5.2"
pytest-cov = "^2.11.1"
pydocstyle = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
